<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="@dimen/dimens_16dp"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <TextView
        android:id="@+id/workout_progress_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/workout_progress"
        app:layout_constraintTop_toTopOf="@id/progress_recycler"
        app:layout_constraintBottom_toBottomOf="@+id/progress_recycler"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_margin="@dimen/dimens_8dp"
        android:textColor="@color/black"
        />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/progress_recycler"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toTopOf="@id/workout_image_switcher"
        app:layout_constraintStart_toEndOf="@id/workout_progress_text"
        tools:itemCount="@integer/integer_1"
        android:orientation="horizontal"
        android:layout_margin="@dimen/dimens_8dp"
        />

    <ImageSwitcher
        android:id="@+id/workout_image_switcher"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintTop_toBottomOf="@id/progress_recycler"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toTopOf="@id/exercise_description"
        android:layout_marginBottom="@dimen/dimens_16dp"
        tools:background="@color/gray_4"
        />

    <ImageView
        android:id="@+id/next_image_btn"
        android:layout_width="@dimen/dimens_32dp"
        android:layout_height="@dimen/dimens_32dp"
        app:layout_constraintTop_toTopOf="@id/workout_image_switcher"
        app:layout_constraintBottom_toBottomOf="@id/workout_image_switcher"
        app:layout_constraintEnd_toEndOf="@id/workout_image_switcher"
        android:tint="@color/black"
        android:src="@drawable/ic_chevron_right"
        android:contentDescription="@string/next_image_button" />

    <ImageView
        android:id="@+id/prev_image_btn"
        android:layout_width="@dimen/dimens_32dp"
        android:layout_height="@dimen/dimens_32dp"
        app:layout_constraintTop_toTopOf="@id/workout_image_switcher"
        app:layout_constraintBottom_toBottomOf="@id/workout_image_switcher"
        app:layout_constraintStart_toStartOf="@id/workout_image_switcher"
        android:tint="@color/black"
        android:src="@drawable/ic_chevron_left"
        android:contentDescription="@string/previous_image_button" />

    <TextView
        android:id="@+id/exercise_description"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/exercise_description"
        android:textColor="@color/black"
        app:layout_constraintTop_toTopOf="@id/exercise_description_icon"
        app:layout_constraintBottom_toBottomOf="@id/exercise_description_icon"
        app:layout_constraintEnd_toStartOf="@id/exercise_description_icon"
        android:padding="@dimen/dimens_8dp"
        android:layout_marginEnd="@dimen/dimens_8dp"
        />

    <ImageView
        android:id="@+id/exercise_description_icon"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/ic_outline_error_outline_24"
        android:tint="@color/black"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toTopOf="@id/timer_image"
        android:scaleY="-1"
        android:padding="12dp"
        android:contentDescription="@string/info_btn" />

    <ImageView
        android:id="@+id/timer_image"
        android:layout_width="@dimen/dim64"
        android:layout_height="@dimen/dim64"
        android:src="@drawable/ic_timer_black_24dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginStart="16dp"
        android:layout_marginVertical="16dp"
        android:contentDescription="@string/timer" />

    <TextView
        android:id="@+id/timer_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/start_in"
        android:fontFamily="sans-serif-thin"
        android:textStyle="italic"
        android:textSize="@dimen/text_size_20"
        android:textColor="@color/black"
        app:layout_constraintStart_toEndOf="@id/timer_image"
        app:layout_constraintTop_toTopOf="@id/timer_image"
        app:layout_constraintBottom_toTopOf="@id/timer_value"
        />

    <TextView
        android:id="@+id/timer_value"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="@dimen/text_size_25"
        android:text="@string/_000"
        android:textColor="@color/black"
        app:layout_constraintBottom_toBottomOf="@id/timer_image"
        app:layout_constraintStart_toEndOf="@id/timer_image"
        app:layout_constraintTop_toBottomOf="@id/timer_text"
        />

    <com.google.android.material.card.MaterialCardView
        android:id="@+id/start_card"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:strokeColor="@color/gray_4"
        app:strokeWidth="1dp"
        app:cardCornerRadius="@dimen/dimens_16dp"
        android:theme="@style/AppTheme"
        android:clickable="true"
        android:layout_margin="@dimen/dimens_16dp"
        >

        <TextView
            android:id="@+id/start_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/start"
            android:textColor="@color/black"
            android:textSize="@dimen/text_size_25"
            android:layout_marginHorizontal="@dimen/dimens_16dp"
            android:layout_marginVertical="@dimen/dimens_4dp"
            />

    </com.google.android.material.card.MaterialCardView>

</androidx.constraintlayout.widget.ConstraintLayout>
