<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:paddingVertical="@dimen/padding_10"
    android:background="@drawable/rounded_outline"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <TextView
        android:id="@+id/request_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/request_text"
        android:paddingHorizontal="@dimen/padding_10"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

    <TextView
        android:id="@+id/decline_button"
        android:layout_width="0dp"
        android:textAlignment="center"
        android:layout_height="wrap_content"
        android:background="@drawable/rounded_outline_toggle"
        android:paddingHorizontal="@dimen/padding_10"
        android:paddingVertical="@dimen/padding_5"
        android:textSize="@dimen/text_size_13"
        android:text="@string/decline"
        android:textColor="@color/black"
        android:layout_marginHorizontal="@dimen/padding_10"
        android:layout_marginTop="@dimen/padding_10"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/request_text"
        app:layout_constraintEnd_toStartOf="@id/accept_button"/>
    <TextView
        android:id="@+id/accept_button"
        android:layout_width="0dp"
        android:textAlignment="center"
        android:layout_height="wrap_content"
        android:paddingHorizontal="@dimen/padding_10"
        android:paddingVertical="@dimen/padding_5"
        android:layout_marginHorizontal="@dimen/padding_10"
        android:textSize="@dimen/text_size_13"
        android:textColor="@color/black"
        android:text="@string/accept"
        android:background="@drawable/rounded_outline_toggle_active"
        android:layout_marginTop="@dimen/padding_10"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/request_text"
        app:layout_constraintStart_toEndOf="@id/decline_button"/>

</androidx.constraintlayout.widget.ConstraintLayout>