<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <TextView
        android:id="@+id/title"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/parameter_text_dummy"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toStartOf="@id/value"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:textColor="@color/black"
        app:layout_constraintHorizontal_weight="5"
        android:layout_margin="@dimen/dimens_8dp"
        android:textStyle="italic"
        android:textSize="@dimen/text_size_15"
        />

    <EditText
        android:id="@+id/value"
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:text="@string/parameter_goal_dummy"
        app:layout_constraintEnd_toStartOf="@id/units"
        app:layout_constraintStart_toEndOf="@id/title"
        app:layout_constraintHorizontal_weight="2"
        android:textSize="@dimen/text_size_20"
        android:importantForAutofill="no"
        android:inputType="numberDecimal" />

    <TextView
        android:id="@+id/units"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/measure_unit"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toEndOf="@id/value"
        app:layout_constraintBottom_toTopOf="@id/goal_status"
        app:layout_constraintHorizontal_weight="3"
        />

    <TextView
        android:id="@+id/goal_status"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="(100 % от цели)"
        android:textStyle="italic"
        android:textColor="@color/bright_green"
        app:layout_constraintStart_toStartOf="@id/units"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@id/units"
        android:textSize="12sp"
        />

</androidx.constraintlayout.widget.ConstraintLayout>